# stm32-libopencm3

./: .gitignore  .gitmodules  .travis.yml  CMakeLists-rog.txt  CMakeLists.txt  README  README.md
cpptest/: CMakeLists.txt  devices_ln  drivers_ln  hal_ln  main.cpp  utils_ln
cpptest/hal_platform_linux/platform/hal/: uart.hpp
esp8266/: commands  (+2 more)
firmware/: CMakeLists-backup.txt  CMakeLists.txt  common.cmake  external_libraries.cmake  run_test.sh
firmware/cmake/: app_external_libraries.cmake  common.cmake  unittests_external_libraries.cmake
firmware/lib/: libraries.cmake
firmware/src/: CMakeLists.txt
firmware/src/app/: CMakeLists.txt
firmware/src/app/src/: main.cpp  main_test.cpp
firmware/src/board/black_pill/: CMakeLists.txt  board.cmake
firmware/src/board/black_pill/ld/: stm32f405x6.ld
firmware/src/board/linux/: board.cmake
firmware/src/board/stm32smart/: CMakeLists.txt
firmware/src/devices/: CMakeLists.txt
firmware/src/devices/include/devices/: cwjap_command.hpp  cwmode_command.hpp  esp8266wlan.hpp  reset_command.hpp
firmware/src/devices/src/: esp8266wlan.cpp
firmware/src/devices/test/: CMakeLists.txt
firmware/src/devices/test/src/: esp8266_wlan_test.cpp  template_inst_helper.cpp
firmware/src/drivers/: CMakeLists.txt
firmware/src/drivers/include/drivers/: uart.hpp
firmware/src/drivers/src/: uart.cpp
firmware/src/drivers/test/: CMakeLists.txt
firmware/src/drivers/test/src/: dummy.cpp
firmware/src/hal/include/hal/: gpio.hpp  uart.hpp
firmware/src/os/: CMakeLists.txt
firmware/src/os/include/: Timer.hpp  list.hpp  timer.hpp
firmware/src/os/include/os/: list.hpp  timer.hpp
firmware/src/os/include/private/: PrivateOs.hpp  PrivateTimer.hpp
firmware/src/os/src/: Os.cpp  Timer.cpp  list.cpp  timer.cpp
firmware/src/os/test/: CMakeLists.txt
firmware/src/os/test/src/: TimerTests.cpp  list_test.cpp  timer_test.cpp  timer_tests.cpp
firmware/src/platform/linux/: CMakeLists.txt
firmware/src/platform/linux/hal/: plt_hal_uart.hpp
firmware/src/platform/lld/gpio_v1/: lld_hal_gpio.hpp
firmware/src/platform/lld/usart_v1/: lld_hal_uart.hpp
firmware/src/platform/stm32f411/dma/: ll_dma.cpp  ll_dma.hpp
firmware/src/platform/stm32f411/gpio/: ll_gpio.cpp
firmware/src/platform/stm32f411/hal/: plt_hal_dma.hpp  plt_hal_gpio.cpp  plt_hal_gpio.hpp  plt_hal_uart.hpp
firmware/src/platform/stm32f411/uart/: ll_uart.cpp  ll_uart_mapping.hpp
firmware/src/utils/src/: console_print.cpp
firmware/src/utils/test/: CMakeLists.txt
firmware/test/unittests/: CMakeLists.txt
firmware/tools/: build-env.sh  build.py  clean.py  flash.py
firmware/tools/jlink/: flashCommand.jlink
firmware/tools/toolchains/: arm_toolchain.cmake  x86_64_toolchain.cmake
serial_client/: CMakeLists.txt  main.cpp  serial_client
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.c
src/app/include/: ec_bus.h  ec_bus_transport.h  messages.h  msg_gps_buffer.h  msg_serializer.h  server.hpp
src/app/src/: ec_bus.c  ec_bus_transport.c  exti_hal_adapter.c  main.c  main.cpp  main2.cpp  main_test.cpp  server.cpp  usart_hal_adapter.c  usart_hal_handler.c
src/devices/include/devices/: esp8266commands.hpp  esp8266wlan.hpp
src/devices/src/: dump  esp8266wlan.cpp
src/drivers/: CMakeLists.txt
src/drivers copy/: CMakeLists.txt
src/drivers copy/include/: Led.hpp  Motor.hpp  gpio.hpp
src/drivers copy/src/: Esp8266.cpp  Gpio.cpp  Led.cpp  Motor.cpp
src/drivers/include/: Esp8266.hpp  Esp8266Wlan.hpp  Gpio.hpp  Led.hpp  gfx_bw.h  gpio.hpp  gps.h  hd44780.h  led.h  rotary_encoder.h  ssd1306.h
src/drivers/include/devices/: esp8266wlan.hpp
src/drivers/include/drivers/: gpio.hpp  uart.hpp
src/drivers/include/hal/: exti.h  usart.h
src/drivers/src/: Esp8266.cpp  Esp8266Wlan.cpp  Gpio.cpp  Led.cpp  esp8266wlan.cpp  gfx_bw.c  gps.c  hd44780.c  led.c  rotary_encoder.c  ssd1306.c
src/drivers/src/hal/: exti.c
src/drivers/tests/: CMakeLists.txt  led_tests.cpp
src/drivers/tests/src/: Esp8266WlanTests.cpp
src/hal/: CMakeLists.txt
src/hal/include/hal/: dma.hpp  gpio.hpp  uart.hpp
src/hal/src/: dummy.cpp  uart.cpp
src/os/: CMakeLists.txt
src/os/include/: Os.hpp  Timer.hpp  timer.hpp
src/os/include/private/: PrivateOs.hpp  PrivateTimer.hpp
src/os/src/: Os.cpp  Timer.cpp  sys_timer.c  timer.cpp
src/os/test/: CMakeLists.txt
src/os/test/src/: TimerTests.cpp
src/platform/include/: platform.hpp  platform_config.hpp  platform_gpio.hpp
src/platform/include/platform/: config.hpp  peripherals.hpp
src/platform/stm32f411/: CMakeLists.txt
src/platform/stm32f411/config/: platform_impl_config.hpp  plt_config.hpp  plt_peripherals_gpio.hpp  plt_peripheraps_uart.hpp
src/platform/stm32f411/dma/: ll_dma.cpp  ll_dma_if.hpp
src/platform/stm32f411/drivers/: gpio.cpp
src/platform/stm32f411/gpio/: ll_gpio.cpp  ll_gpio.hpp
src/platform/stm32f411/hal/: plt_hal.hpp  plt_hal_gpio.hpp  plt_hal_gpio_t.hpp  plt_hal_uart.cpp  plt_hal_uart.hpp  plt_hal_uart_base.hpp  plt_hal_uart_t.hpp
src/platform/stm32f411/platform/: platform_impl_gpio.hpp
src/platform/stm32f411/uart/: ll_uart.cpp  ll_uart.hpp  ll_uart_if.hpp
src/port/black_pill/: port.cmake
src/port/black_pill/include/: target.h
src/port/black_pill/ld/: stm32f405x6.ld
src/port/black_pill/src/: isr.cpp
src/port/stm32smart/: CMakeLists.txt  port.cmake  target.h
src/port/stm32smart/include/: target.h
src/port/stm32smart/ld/: STM32F103C8Tx_FLASH.ld
src/port/stm32smart/src/: isr.c  isr.cpp
src/port/stm32smart/startup/: startup_stm32f103xb.s
src/sys/: CMakeLists.txt
src/sys/include/: sys.h  sys_timer.h
src/sys/src/: sys_timer.c
src/types/include/: List2.hpp  list.h  ring_buffer.h
src/types/src/: ring_buffer.c
src/utils/: CMakeLists.txt
src/utils/include/: List.hpp  RingBuffer.hpp  console_print.hpp  delay.h  list.h  ring_buffer.h  ring_buffer.hpp  uprintf.hpp
src/utils/include/utils/: console_print.hpp
src/utils/src/: RingBuffer.cpp  console_print.cpp  delay.c  ring_buffer.cpp  uprintf.cpp
src/utils/test/: CMakeLists.txt
src/utils/test/src/: List.hpp  ListTests.cpp  RingBufferTest.cpp
(+18 files in other folders)
