cmake_minimum_required(VERSION 3.16)

set(APP_BIN       ${CMAKE_PROJECT_NAME})
set(UTILS_BIN     ${CMAKE_PROJECT_NAME}_utils)
set(DRIVERS_BIN   ${CMAKE_PROJECT_NAME}_drivers)
set(OS_BIN        ${CMAKE_PROJECT_NAME}_os)
set(PORT_BIN      ${CMAKE_PROJECT_NAME}_port)
set(PLATFORM_BIN  ${CMAKE_PROJECT_NAME}_${PLATFORM})

add_subdirectory(app)
# add_subdirectory(utils)
add_subdirectory(drivers)
# add_subdirectory(os)
add_subdirectory(port/${PORT})
add_subdirectory(platform/${PLATFORM})